deploy: 0a22ecea6afb404316aee4103e1bf5c49a6dd6f8

--- a/installation_guide.html
+++ b/installation_guide.html
@@ -3,7 +3,7 @@
   <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="index" title="Index" href="genindex.html" /><link rel="search" title="Search" href="search.html" /><link rel="next" title="sargeom.coordinates Module" href="api_reference.html" /><link rel="prev" title="SAR Geometry" href="index.html" />
+<link rel="index" title="Index" href="genindex.html" /><link rel="search" title="Search" href="search.html" /><link rel="next" title="sargeom.coordinates Package" href="api_reference.html" /><link rel="prev" title="SAR Geometry" href="index.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
         <title>Installation Guide - sargeom</title>
@@ -318,7 +318,7 @@ pip<span class="w"> </span>install<span class="w"> </span>-e<span class="w"> </s
                 <div class="context">
                   <span>Next</span>
                 </div>
-                <div class="title">sargeom.coordinates Module</div>
+                <div class="title">sargeom.coordinates Package</div>
               </div>
               <svg class="furo-related-icon"><use href="#svg-arrow-right"></use></svg>
             </a>
