--- a/_modules/sargeom/coordinates/cartographic.html
+++ b/_modules/sargeom/coordinates/cartographic.html
@@ -649,6 +649,41 @@
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;The instance to append must be a Cartographic instance.&quot;</span><span class="p">)</span></div>
 
 
+<div class="viewcode-block" id="Cartographic.concatenate">
+<a class="viewcode-back" href="../../../api/sargeom.coordinates.Cartographic.html#sargeom.coordinates.Cartographic.concatenate">[docs]</a>
+    <span class="nd">@classmethod</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">concatenate</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="o">*</span><span class="n">positions</span><span class="p">):</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Concatenate a sequence of Cartographic instances into a single instance.</span>
+
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">        positions : :class:`sargeom.coordinates.Cartographic`</span>
+<span class="sd">            The sequence of Cartographic instances to concatenate.</span>
+<span class="sd">        </span>
+<span class="sd">        Returns</span>
+<span class="sd">        -------</span>
+<span class="sd">        :class:`sargeom.coordinates.Cartographic`</span>
+<span class="sd">            A new Cartographic instance containing all positions from the input instances.</span>
+
+<span class="sd">        Raises</span>
+<span class="sd">        ------</span>
+<span class="sd">        :class:`ValueError`</span>
+<span class="sd">            - If the input list is empty.</span>
+<span class="sd">            - If not all items in the list are instances of Cartographic.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="c1"># Check if the input list is empty</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">positions</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Input list is empty.&quot;</span><span class="p">)</span>
+
+        <span class="c1"># Check if all items in the list are instances of Cartographic</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="nb">all</span><span class="p">(</span><span class="nb">isinstance</span><span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="bp">cls</span><span class="p">)</span> <span class="k">for</span> <span class="n">pos</span> <span class="ow">in</span> <span class="n">positions</span><span class="p">):</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;All items in the list must be Cartographic instances.&quot;</span><span class="p">)</span>
+
+        <span class="c1"># Concatenate the positions into a single Cartographic instance</span>
+        <span class="k">return</span> <span class="bp">cls</span><span class="o">.</span><span class="n">from_array</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">concatenate</span><span class="p">([</span><span class="n">pos</span><span class="o">.</span><span class="n">__array__</span><span class="p">()</span> <span class="k">for</span> <span class="n">pos</span> <span class="ow">in</span> <span class="n">positions</span><span class="p">],</span> <span class="n">axis</span><span class="o">=</span><span class="mi">0</span><span class="p">))</span></div>
+
+
     <span class="k">def</span><span class="w"> </span><span class="fm">__eq__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">right</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Compares this Cartographic instance against the provided one componentwise and returns `True` if they are equal, `False` otherwise.</span>
