--- a/_modules/sargeom/coordinates/cartographic.html
+++ b/_modules/sargeom/coordinates/cartographic.html
@@ -740,7 +740,7 @@
 <span class="sd">        &gt;&gt;&gt; A == B</span>
 <span class="sd">        False</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">allclose</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__array__</span><span class="p">(),</span> <span class="n">right</span><span class="o">.</span><span class="n">__array__</span><span class="p">())</span>
+        <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">allclose</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__array__</span><span class="p">(),</span> <span class="n">right</span><span class="o">.</span><span class="n">__array__</span><span class="p">(),</span> <span class="n">rtol</span><span class="o">=</span><span class="mf">1e-12</span><span class="p">,</span> <span class="n">atol</span><span class="o">=</span><span class="mf">1e-9</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Cartographic.is_collection">
 <a class="viewcode-back" href="../../../api/sargeom.coordinates.Cartographic.html#sargeom.coordinates.Cartographic.is_collection">[docs]</a>
